deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avatar-service
  labels:
    app: avatar-service
spec:
  selector:
    app: avatar-service
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
